Finished styling the ListView and fixed the Drawer on mobile

--- a/src/components/stylesheets/Header.module.scss
+++ b/src/components/stylesheets/Header.module.scss
@@ -1,6 +1,7 @@
 .Container {
   width: 100%;
   height: 50px;
+  min-height: 50px;
   border-bottom: 1px solid #f1f1f1;
   display: flex;
   align-items: center;
