--- a/src/containers/stylesheets/AppContainer.module.scss
+++ b/src/containers/stylesheets/AppContainer.module.scss
@@ -8,6 +8,7 @@
   overflow: hidden;
   display: flex;
   width: 300px;
+  min-height: 100%;
   height: 100%;
 }
 
